// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`/components/common/InfiniteScroll should match snapshot 1`] = `
<div>
  <div
    class="infinite-scroll signup-team-all"
  >
    <div />
    No more items to fetch
  </div>
</div>
`;

exports[`/components/common/InfiniteScroll should not show loading screen if there is no data 1`] = `
<div>
  <div
    class="infinite-scroll signup-team-all"
  >
    <div />
    <div
      class="loading-screen"
      style="position: relative;"
    >
      <div
        class="loading__content"
      >
        <p>
           
        </p>
        <div
          class="round round-1"
        />
        <div
          class="round round-2"
        />
        <div
          class="round round-3"
        />
      </div>
    </div>
  </div>
</div>
`;
